# atlasDb

./: .gitignore  BACKEND_MIGRATION_PLAN.md  Cargo.toml  README.md  RFC-OBS-001.md  RFC_001_AEC.md  ROADMAP.md  STATUS.md  TODO.md  build.rs  clean_data.sh  compile_for_windows.sh  config.json  deploy.md  load_test_wallets.json  meu_binlog.json  start_demo.sh  start_demo_dev.sh  start_demo_prod.sh  start_intranet_node.sh  start_windows_node.bat
atlas-bank/: Cargo.toml
atlas-bank/src/: lib.rs  tests.rs
atlas-bank/src/compliance_engine/: kyc.rs  mod.rs  service.rs  traits.rs
atlas-bank/src/institution_core/: institution.rs  mod.rs  registry.rs
atlas-bank/src/institution_permissions/: mod.rs
atlas-bank/src/institution_subledger/: accounts.rs  engine.rs  mod.rs
atlas-common/: Cargo.toml
atlas-common/proto/: atlas.proto
atlas-common/src/: entry.rs  error.rs  genesis.rs  lib.rs  transaction.rs  utils.rs
atlas-common/src/address/: address.rs  errors.rs  exposed_address.rs  hidden_address.rs  mod.rs  profile_address.rs
atlas-common/src/auth/: ed25519.rs  mod.rs
atlas-common/src/crypto/: hash.rs  merkle.rs  mod.rs  state.rs
atlas-common/src/env/: node.rs  proposal.rs  vote_data.rs
atlas-common/src/env/consensus/: evidence.rs  mod.rs  types.rs
atlas-common/src/transactions/: errors.rs  mod.rs  payload.rs  request.rs  types.rs  validation.rs
atlas-common/src/utils/: mod.rs  node_id.rs  security.rs  time.rs
atlas-consensus/: Cargo.toml
atlas-consensus/src/: lib.rs
atlas-consensus/src/cluster/: core.rs  mod.rs  node.rs  peers.rs  proposals.rs  voting.rs
atlas-consensus/src/consensus/: engine.rs  evaluator.rs  mod.rs  pool.rs  registry.rs
atlas-consensus/src/env/: runtime.rs
atlas-core/: Cargo.toml  build.rs  debug_check.sh  gen_certs_v3.sh  log.txt
atlas-core/src/: builder.rs  cli.rs  config.rs  error.rs  lib.rs  main copy.rs  main.rs  main.rs.disabled  peer_manager.rs  utils.rs
atlas-core/src/cluster/: builder.rs  core.rs  election.rs  mod.rs  node.rs  peers.rs  proposals.rs  voting.rs
atlas-core/src/env/: config.rs  mod.rs  runtime.rs
atlas-core/src/env/consensus/: engine.rs  evaluator.rs  registry.rs
atlas-core/src/env/storage/: audit.rs  mod.rs
atlas-core/src/ledger/: binlog.rs  index.rs  mod.rs
atlas-core/src/network/: error.rs  in_memory.rs  key_manager.rs  message.rs  mod.rs  traits.rs
atlas-core/src/network/p2p/: adapter.rs  behaviour.rs  codec.rs  config.rs  events.rs  ports.rs  protocol.rs
atlas-core/src/rpc/: client.rs  mod.rs  server.rs
atlas-core/src/runtime/: builder.rs  maestro.rs  mod.rs
atlas-core/tests/: in_memory_test.rs
atlas-ledger/: CHART_OF_ACCOUNTS.md  Cargo.toml  build.rs
atlas-ledger/explorer/: package-lock.json  package.json  vite.config.ts
atlas-ledger/explorer/src/: App.css  App.tsx  index.css
atlas-ledger/explorer/src/components/: Navbar.tsx  StatusBadge.tsx
atlas-ledger/explorer/src/lib/: assets.ts
atlas-ledger/explorer/src/pages/: Accounts.tsx  AddressDetail.tsx  Assets.tsx  Home.tsx  Inspector.tsx  TransactionDetail.tsx  Transactions.tsx
atlas-ledger/proto/: ledger.proto
atlas-ledger/src/: binlog.rs  lib.rs
atlas-ledger/src/core/: mod.rs
atlas-ledger/src/core/ledger/: account.rs  asset.rs  genesis.rs  manager.rs  mod.rs  proposal_manager.rs  schema.rs  slashing.rs  token.rs  transaction_engine.rs
atlas-ledger/src/core/ledger/state/: mod.rs
atlas-ledger/src/core/ledger/storage/: audit.rs  mod.rs  shards.rs
atlas-ledger/src/core/ledger/transaction_engine/: fees.rs  inflation.rs  interceptors.rs  mod.rs  validation.rs
atlas-ledger/src/core/nft_kyc/: error.rs  mod.rs  model.rs  proof.rs  registry.rs  serialization.rs  service.rs
atlas-ledger/src/core/runtime/: binlog.rs  index.rs  mod.rs
atlas-ledger/src/core/service/: mod.rs
atlas-ledger/src/interface/: mod.rs
atlas-ledger/src/interface/api/: service.rs
atlas-ledger/src/state/: account.rs  mod.rs
atlas-ledger/src/storage/: audit.rs  mod.rs
atlas-mempool/: Cargo.toml
atlas-mempool/src/: lib.rs
atlas-mempool/src/core/: mempool.rs
atlas-mempool/src/core/mempool/: local.rs  redis.rs
atlas-mempool/tests/: integration.rs
atlas-node/: Cargo.toml  build.rs
atlas-node/src/: builder.rs  cli.rs  config.rs  env_config.rs  lib.rs  main.rs  setup.rs
atlas-node/src/api/: rest.rs
atlas-node/src/rpc/: server.rs
atlas-node/src/runtime/: block_producer.rs  builder.rs  consensus_driver.rs  maestro.rs  mod.rs  sync_driver.rs
atlas-node/tests/: cluster_simulation.rs
atlas-p2p/: Cargo.toml
atlas-p2p/src/: adapter.rs  behaviour.rs  builder.rs  codec.rs  error.rs  events.rs  in_memory.rs  lib.rs  message.rs  mod.rs  peer_manager.rs  ports.rs  protocol.rs  traits.rs  utils.rs
atlas-sdk/: Cargo.toml
atlas-sdk/src/: lib.rs  utils.rs
atlas-sdk/src/auth/: ed25519.rs  mod.rs
atlas-sdk/src/env/: mod.rs  node.rs  proposal.rs  vote_data.rs
atlas-sdk/src/env/consensus/: types.rs
atlas-wallet/: Cargo.toml  ROADMAP.md  build.rs  build_wasm.sh
atlas-wallet/frontend/: index.html  package-lock.json  package.json  vite.config.ts
atlas-wallet/frontend/public/: manifest.json
atlas-wallet/frontend/src/: App.tsx  index.css
atlas-wallet/frontend/src/components/: AddressSection.tsx
atlas-wallet/frontend/src/components/wallet/: AssetsList.tsx  (+4 more)
atlas-wallet/frontend/src/hooks/: useFavorites.ts  useTransactionSender.ts  useWalletData.ts
atlas-wallet/frontend/src/lib/: assets.ts  client.ts  rpc.ts
atlas-wallet/frontend/src/pages/: History.tsx  Home.tsx  Settings.tsx  Wallet.tsx
atlas-wallet/frontend/src/proto/: ledger.ts
atlas-wallet/frontend/src/utils/: storage.ts
atlas-wallet/src/: errors.rs  lib.rs  main.rs  wasm.rs
atlas-wallet/src/identity/: errors.rs  identity.rs  mod.rs  secret.rs  serde_pubkey.rs  sk_derivation.rs
atlas-wallet/src/profile/: exposed.rs  hidden.rs  mod.rs  profile_type.rs
atlas-wallet/src/session/: session.rs
atlas-wallet/src/vault/: mod.rs  password.rs  vault.rs
atlas-wallet/src/wallet/: actions.rs  auth.rs  factory.rs  manager.rs  mod.rs  queries.rs  types.rs
src/: ffi.rs  (+13 more)
(+99 files in other folders)
