[workspace]
resolver = "2"
members = [
    "atlas-core",
    "atlas-sdk",
]

[workspace.dependencies]
tonic-build = { version = "0.11", features = ["prost"] }
prost-build = "0.12"
async-trait = "0.1"
bincode = "1.3"
env_logger = "0.11"
futures = "0.3"
hex = { version = "0.4", features = ["serde"] }
log = "0.4"
prost = "0.12"
libp2p = { version = "0.56", features = [
  "tokio",
  "tcp",
  "dns",
  "noise",
  "yamux",
  "gossipsub",
  "identify",
  "ping",
  "mdns",
  "kad",
  "request-response",
  "autonat",
  "relay",
  "quic",
  "macros"
] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
#tokio = { version = "1.36", features = ["full"] }
tokio = { version = "1.36", features = ["macros", "sync", "rt", "fs"], default-features = false }
tonic = { version = "0.11", features = ["transport", "tls", "tls-webpki-roots"] }
tonic-reflection = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
uuid = { version = "1.18.0", features = ["v4", "js"] }
ed25519-dalek = "2.1"
tempfile = "3.8"