[workspace]
members = [
    "atlas-common",
    "atlas-ledger",
    "atlas-p2p",
    "atlas-consensus",
    "atlas-node",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
libp2p = { version = "0.53", features = ["full"] }
rocksdb = "0.21.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
tonic = "0.10"
async-trait = "0.1"
bincode = "1.3"
hex = { version = "0.4", features = ["serde"] }