[workspace]
members = [
    "atlas-common",
    "atlas-ledger",
    "atlas-p2p",
    "atlas-consensus",
    "atlas-node",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
libp2p = { version = "0.53", features = ["full"] }
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb", branch="master" }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
tonic = "0.10"
async-trait = "0.1"
bincode = "1.3"
hex = { version = "0.4", features = ["serde"] }
futures = "0.3"
log = "0.4"
prost = "0.12"
tonic-reflection = "0.10"
tracing-appender = "0.2"
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
tempfile = "3.8"
tonic-build = "0.10"
prost-build = "0.12"