[package]
name = "atlas-common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["macros", "sync", "rt"], default-features = false }
serde_json.workspace = true
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
# libp2p = { workspace = true, features = ["identify"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
tonic = "0.10" # For Status in AtlasError
async-trait.workspace = true
bincode.workspace = true
hex = { version = "0.4", features = ["serde"] }

