[package]
name = "atlas-common"
version = "0.1.0"
edition = "2021"

[features]
default = ["grpc"]
grpc = ["dep:tonic", "dep:tokio"]

[dependencies]
tokio = { workspace = true, features = ["macros", "sync", "rt"], optional = true }
serde_json.workspace = true
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
bech32 = "0.9.1"
# libp2p = { workspace = true, features = ["identify"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
tonic = { version = "0.10", optional = true } # For Status in AtlasError
async-trait.workspace = true
bincode.workspace = true
hex = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rs_merkle = "1.4"
getrandom = { version = "0.2", features = ["js"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
