[package]
name = "atlas-consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
atlas-common = { path = "../atlas-common" }
atlas-ledger = { path = "../atlas-ledger" }
atlas-p2p = { path = "../atlas-p2p" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
