[package]
name = "atlas-consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
atlas-common = { path = "../atlas-common" }
atlas-ledger = { path = "../atlas-ledger" }
atlas-p2p = { path = "../atlas-p2p" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
ed25519-dalek = "2.1"
libp2p = { version = "0.53", features = ["macros", "tokio", "tcp", "dns", "quic", "noise", "yamux", "kad", "identify", "ping", "gossipsub", "mdns", "request-response", "ed25519"] }
bs58 = "0.5"
