[package]
name = "atlas-ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
atlas-common = { path = "../atlas-common" }
atlas-bank = { path = "../atlas-bank" }
atlas-kyc = { path = "../atlas-kyc" }
atlas-mempool = { path = "../atlas-mempool" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redb = "1.4.0"
ed25519-dalek = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
bincode = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tonic-web = "0.10"
tower-http = { version = "0.4", features = ["cors"] }
tower-http-axum = { package = "tower-http", version = "0.6.2", features = ["cors"] }
uuid = { workspace = true }
axum = "0.8.7"
bs58 = "0.5.1"

[build-dependencies]
tonic-build = { workspace = true }
