[package]
name = "atlas-mempool"
version = "0.1.0"
edition = "2024"

[dependencies]
atlas-common = { path = "../atlas-common" }
tokio = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
hex = { workspace = true }
ed25519-dalek = { workspace = true }
redis = { version = "1.0.2", features = ["tokio-comp"] }
serde_json = "1.0"

[dev-dependencies]
rand.workspace = true
serial_test = "3.3.1"
