[package]
name = "atlas-node"
version = "0.1.0"
edition = "2021"

[dependencies]
atlas-common = { path = "../atlas-common" }
atlas-ledger = { path = "../atlas-ledger" }
atlas-p2p = { path = "../atlas-p2p" }
atlas-consensus = { path = "../atlas-consensus" }
atlas-mempool = { path = "../atlas-mempool" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
sha2 = "0.10"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
tracing-appender = "0.2"
igd = "0.12"
uuid = { version = "1.4", features = ["v4"] }
bincode = "1.3"
libp2p = { version = "0.53", features = ["full"] }
tonic = "0.10"
prost = "0.12"
tonic-web = "0.10"
tower-http = { version = "0.4", features = ["cors"] }
tower-http-axum = { package = "tower-http", version = "0.6.2", features = ["cors"] }
axum = "0.8.7"


[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
