[package]
name = "atlas-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["macros", "sync", "rt"], default-features = false }
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
# libp2p = { workspace = true, features = ["identify"] }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
async-trait.workspace = true
bincode.workspace = true
hex.workspace = true
