[package]
name = "atlas-wallet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "atlas-wallet"
path = "src/main.rs"

[[bin]]
name = "vault_cli"
path = "src/bin/vault_cli.rs"

[features]
default = []
grpc = ["dep:tonic", "dep:prost", "dep:tokio", "atlas-common/grpc"]

[lib]
name = "atlas_wallet"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
argon2 = "0.5"
aes-gcm = "0.10"
bincode = "1.3"
bs58 = "0.4"
base64 = "0.21"
base64ct = "<=1.7"
bech32 = "0.9.1"
console_error_panic_hook = "0.1"
clap = { version = "4.3", features = ["derive"] }
ed25519-dalek = "2.2.0"
hex = "0.4"
hmac = "0.12"
once_cell = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
subtle = "2.4"
time = "0.3"
thiserror = "1.0"
zeroize = { version = "1.8.1", features = ["derive"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
tonic = { version = "0.10", optional = true }
prost = { version = "0.12", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
atlas-common = { version = "0.1.0", path = "../atlas-common", default-features = false }

[build-dependencies]
tonic-build = "0.10"

# Explicitly define transitive dependencies to control their features for Wasm
uuid = { version = "1.4.1", features = ["v4", "js"] }
getrandom = { version = "0.2", features = ["js"] }


[dev-dependencies]
cargo-tarpaulin = "0.26"

# This section overrides dependencies for this crate's build only.
# It forces wasm-compatible versions and features, solving conflicts
# from non-wasm-ready dependencies like atlas-sdk.
[patch.crates-io]
uuid = { version = "1.4.1", features = ["v4", "js"] }
